--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "deminifier",
-    "license": "MPL 1.1/GPL 2.0/LGPL 2.1",
+    "license": "BSD/MIT",
     "author": "Patrick Walton",
     "version": "0.1",
-    "fullName": "deminifier",
+    "fullName": "JavaScript Deminifier",
     "id": "jid0-urNntxBDUXSAGTXY2gB7KQmd4nU", 
     "description": "Simple JavaScript deminifier"
 }
